# MiniDB

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CMakeLists.txt  GEMINI.md  MILESTONE.md  README.md  TASK.md
scripts/: CMakeLists.txt  benchmark.cpp
src/: CMakeLists.txt  client_main.cpp  server_main.cpp
src/catalog/: CMakeLists.txt  catalog.cpp  catalog.h  column.h  schema.h
src/common/: status.h
src/execution/: CMakeLists.txt  executor.cpp  executor.h
src/network/: CMakeLists.txt  client.cpp  client.h  server.cpp  server.h
src/parser/: CMakeLists.txt  ast.h  lexer.cpp  lexer.h  parser.cpp  parser.h
src/repl/: main.cpp
src/storage/: CMakeLists.txt  btree.h  index.h  log_manager.h  page.h  pager.cpp  pager.h  record.cpp  record.h  recovery_manager.h  table_heap.cpp  table_heap.h
tests/: CMakeLists.txt  catalog_test.cpp  extensive_common_test.cpp  extensive_execution_test.cpp  extensive_parser_test.cpp  extensive_storage_test.cpp  index_test.cpp  integration_test.cpp  network_test.cpp  parser_test.cpp  record_test.cpp  sample_test.cpp  storage_test.cpp  table_test.cpp
